objects/CMPL123__Test_Parent_Object__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Rolled_Up_Number__c</fullName>
        <label>Rolled Up Number</label>
        <summarizedField>CMPL123__Test_Child_Object__c.CMPL123__Number_Field__c</summarizedField>
        <summaryForeignKey>CMPL123__Test_Child_Object__c.CMPL123__Test_Parent_Object__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CMPL123__Test_Formula__c</fullName>
        <formula>CMPL123__Rolled_Up_Number__c  / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Test Parent Object</label>
    <nameField>
        <label>Test Parent Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Parent Objects</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>